--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,19 +16,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Daphnis Up Close" />
-            <TextView
                 android:id="@+id/pub_date"
-                android:layout_below="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Thu, 19 Jan 2017 08:20 EST" />
+            <TextView
+                android:id="@+id/title"
+                android:layout_below="@id/pub_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Daphnis Up Close" />
+
             <ImageView
                 android:id="@+id/image"
-                android:layout_below="@id/pub_date"
+                android:layout_below="@id/title"
+                android:adjustViewBounds="true"
                 android:src="@drawable/imageday"
                 android:layout_above="@+id/description"
                 android:layout_width="match_parent"
