--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,35 +13,55 @@
         android:padding="16dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <TextView
-                android:id="@+id/pub_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Thu, 19 Jan 2017 08:20 EST" />
-            <TextView
-                android:id="@+id/title"
-                android:layout_below="@id/pub_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Daphnis Up Close" />
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_below="@id/title"
-                android:adjustViewBounds="true"
-                android:src="@drawable/imageday"
-                android:layout_above="@+id/description"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:id="@+id/description"
-                android:layout_alignParentBottom="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="The wavemaker moon, Daphnis, is featured in this view, taken as NASA&#039;s Cassini spacecraft made one of its ring-grazing passes over the outer edges of Saturn&#039;s rings on Jan. 16, 2017"/>
-        </RelativeLayout>
+                android:layout_height="match_parent">
+
+                <ProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:visibility="visible"/>
+
+                <TextView
+                    android:id="@+id/pub_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thu, 19 Jan 2017 08:20 EST" />
+
+                <TextView
+                    android:id="@+id/title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_below="@id/pub_date"
+                    android:layout_marginTop="10dp"
+
+                    android:text="Daphnis Up Close" />
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_below="@+id/title"
+
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp"
+
+                    android:src="@drawable/imageday"
+                    android:layout_centerHorizontal="true"
+                    android:adjustViewBounds="true" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    android:layout_below="@+id/image"
+                    android:text="The wavemaker moon, Daphnis, is featured in this view, taken as NASA&#039;s Cassini spacecraft made one of its ring-grazing passes over the outer edges of Saturn&#039;s rings on Jan. 16, 2017"/>
+            </RelativeLayout>
+
 
     </ScrollView>
 
