Fix imageview width

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<ScrollView
     android:id="@+id/swipe_refresh"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:fillViewport="true"
+    android:padding="10dp">
 
         <RelativeLayout
                 android:layout_width="match_parent"
@@ -26,8 +22,7 @@
                 <TextView
                     android:id="@+id/pub_date"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Thu, 19 Jan 2017 08:20 EST" />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/title"
@@ -35,21 +30,18 @@
                     android:layout_height="wrap_content"
 
                     android:layout_below="@id/pub_date"
-                    android:layout_marginTop="10dp"
-
-                    android:text="Daphnis Up Close" />
+                    android:layout_marginTop="10dp" />
 
                 <ImageView
                     android:id="@+id/image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
 
                     android:layout_below="@+id/title"
 
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
 
-                    android:src="@drawable/imageday"
                     android:layout_centerHorizontal="true"
                     android:adjustViewBounds="true" />
 
@@ -57,13 +49,8 @@
                     android:id="@+id/description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
-                    android:layout_below="@+id/image"
-                    android:text="The wavemaker moon, Daphnis, is featured in this view, taken as NASA&#039;s Cassini spacecraft made one of its ring-grazing passes over the outer edges of Saturn&#039;s rings on Jan. 16, 2017"/>
+                    android:layout_below="@+id/image"/>
             </RelativeLayout>
 
-
-    </ScrollView>
-
-</android.support.v4.widget.SwipeRefreshLayout>
+</ScrollView>
 
