--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,12 +39,11 @@
 
                     android:layout_below="@+id/title"
 
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"
-
                     android:layout_centerHorizontal="true"
                     android:adjustViewBounds="true" />
 
+                <!--android:layout_marginTop="5dp"-->
+                <!--android:layout_marginBottom="5dp"-->
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="wrap_content"
