--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
-    android:padding="10dp">
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:background="@android:color/background_light">
 
         <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
                 <ProgressBar
                     android:id="@+id/progress_bar"
@@ -21,11 +24,15 @@
 
                 <TextView
                     android:id="@+id/pub_date"
+                    android:text="23 may 2017 "
+                    style="@style/textStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/title"
+                    android:text="Title some planet some black holes and mystic physics"
+                    style="@style/textStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
 
@@ -35,21 +42,28 @@
                 <ImageView
                     android:id="@+id/image"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
+                    android:layout_height="320dp"
 
+                    android:src="@drawable/imageday"
+
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
                     android:layout_below="@+id/title"
 
                     android:layout_centerHorizontal="true"
+
+                    android:scaleType="fitXY"
                     android:adjustViewBounds="true" />
 
-                <!--android:layout_marginTop="5dp"-->
-                <!--android:layout_marginBottom="5dp"-->
+
+
                 <TextView
                     android:id="@+id/description"
+                    android:text="Description Description Description Description Description Description Description Description Description Description Description long long long long long long long"
+                    style="@style/textStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@+id/image"/>
             </RelativeLayout>
 
 </ScrollView>
-
