--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,11 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:fillViewport="true"
     android:layout_marginTop="10dp"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
+    android:paddingBottom="10dp"
     android:background="@android:color/background_light">
 
         <RelativeLayout
@@ -19,23 +19,19 @@
                     android:id="@+id/progress_bar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:visibility="visible"/>
+                    android:layout_centerInParent="true"/>
 
                 <TextView
                     android:id="@+id/pub_date"
-                    android:text="23 may 2017 "
-                    style="@style/textStyle"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    style="@style/textStyle" />
 
                 <TextView
                     android:id="@+id/title"
-                    android:text="Title some planet some black holes and mystic physics"
-                    style="@style/textStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-
+                    style="@style/textStyle"
                     android:layout_below="@id/pub_date"
                     android:layout_marginTop="10dp" />
 
@@ -43,8 +39,6 @@
                     android:id="@+id/image"
                     android:layout_width="match_parent"
                     android:layout_height="320dp"
-
-                    android:src="@drawable/imageday"
 
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
@@ -55,14 +49,11 @@
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true" />
 
-
-
                 <TextView
                     android:id="@+id/description"
-                    android:text="Description Description Description Description Description Description Description Description Description Description Description long long long long long long long"
-                    style="@style/textStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/textStyle"
                     android:layout_below="@+id/image"/>
             </RelativeLayout>
 
