--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,69 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    android:id="@+id/swipe_refresh"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent"
+
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@android:color/background_light"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:fillViewport="true"
-    android:layout_marginTop="10dp"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:background="@android:color/background_light">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-        <RelativeLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimary">
+        <TextView
+            android:id="@+id/title"
+            android:text="A south polar pit or an Impact Crater?"
+            android:textSize="16sp"
+            android:textColor="@android:color/white"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </android.support.v7.widget.Toolbar>
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="visible"/>
+
+    <ScrollView
+        android:id="@+id/swipe_refresh"
+        android:layout_below="@+id/toolbar"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="320dp"
+
+                android:layout_centerHorizontal="true"
+
+                android:layout_marginBottom="5dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/imageday" />
+
+
+
+            <TextView
+                android:id="@+id/description"
+                android:text="Description Description Description Description Description Description Description Description Description Description Description long long long long long long long"
+                style="@style/textStyle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/image"/>
 
-                <ProgressBar
-                    android:id="@+id/progress_bar"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:visibility="visible"/>
+            <TextView
+                android:id="@+id/pub_date"
+                android:text="23 may 2017 "
+                style="@style/textStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"/>
+            </LinearLayout>
+    </ScrollView>
 
-                <TextView
-                    android:id="@+id/pub_date"
-                    android:text="23 may 2017 "
-                    style="@style/textStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+</RelativeLayout>
 
-                <TextView
-                    android:id="@+id/title"
-                    android:text="Title some planet some black holes and mystic physics"
-                    style="@style/textStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    android:layout_below="@id/pub_date"
-                    android:layout_marginTop="10dp" />
-
-                <ImageView
-                    android:id="@+id/image"
-                    android:layout_width="match_parent"
-                    android:layout_height="320dp"
-
-                    android:src="@drawable/imageday"
-
-                    android:layout_marginBottom="10dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_below="@+id/title"
-
-                    android:layout_centerHorizontal="true"
-
-                    android:scaleType="fitXY"
-                    android:adjustViewBounds="true" />
-
-
-
-                <TextView
-                    android:id="@+id/description"
-                    android:text="Description Description Description Description Description Description Description Description Description Description Description long long long long long long long"
-                    style="@style/textStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/image"/>
-            </RelativeLayout>
-
-</ScrollView>
